[gd_scene load_steps=27 format=3 uid="uid://bsgw214l8i5kg"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="2_3rg7b"]
[ext_resource type="Resource" path="res://data/characters/chapter1_happy_birthday.dtl" id="2_hfj0i"]
[ext_resource type="PackedScene" uid="uid://bbu8j4sjdr8cc" path="res://scenes/levels/basement.tscn" id="2_mapes"]
[ext_resource type="Theme" uid="uid://d3dpxc0131y0n" path="res://data/ui_theme.tres" id="2_xrdut"]
[ext_resource type="PackedScene" uid="uid://bja3q26jutghx" path="res://scenes/actors/lilith.tscn" id="4_cnuh1"]
[ext_resource type="Script" path="res://scenes/scenelet_trigger.gd" id="4_qfjhb"]
[ext_resource type="PackedScene" uid="uid://gpq5v5lkhhob" path="res://scenes/actors/tom.tscn" id="5_wbyti"]
[ext_resource type="Resource" path="res://data/characters/test.dtl" id="5_woklq"]
[ext_resource type="PackedScene" uid="uid://txpi01erx1mq" path="res://scenes/actors/dave.tscn" id="6_bvtjr"]
[ext_resource type="Script" path="res://scenes/physics_prop.gd" id="8_qs3g0"]
[ext_resource type="PackedScene" uid="uid://q8dnube0t51j" path="res://scenes/actors/joaquim.tscn" id="9_1rdcu"]
[ext_resource type="PackedScene" uid="uid://ce3tbwh3wfxba" path="res://scenes/actors/mickey.tscn" id="9_px4l2"]
[ext_resource type="PackedScene" uid="uid://ca257y0ga2whr" path="res://scenes/retro_game_tv.tscn" id="10_yxiqj"]
[ext_resource type="AudioStream" uid="uid://behwaqadkh504" path="res://assets/music/683457__seth_makes_sounds__dope-video-game-boss-music.wav" id="11_vim10"]
[ext_resource type="Script" path="res://assets/models/props/tv.gd" id="12_8ftgm"]
[ext_resource type="PackedScene" uid="uid://bxmgiekbat0a6" path="res://assets/models/props/tv.glb" id="12_yp4lc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2q7ol"]
radius = 0.225
height = 1.25223

[sub_resource type="SphereShape3D" id="SphereShape3D_85lvf"]
radius = 1.33716

[sub_resource type="Environment" id="Environment_yvrrh"]
background_mode = 1
background_color = Color(0.440801, 0.745696, 0.863281, 1)
ambient_light_color = Color(0.219998, 0.798684, 0.804688, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_gubmw"]
radius = 0.213706

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c84g4"]
albedo_color = Color(1, 0.272095, 0.422473, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qcdww"]
material = SubResource("StandardMaterial3D_c84g4")
radius = 0.1
height = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_8d451"]
radius = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_318m4"]
shading_mode = 0
albedo_color = Color(0.09375, 0.09375, 0.09375, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eeq87"]
resource_local_to_scene = true
shading_mode = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_d2sc6"]
size = Vector3(2.50525, 3.50085, 2.87384)

[node name="main" type="Node3D"]

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.25965, 1.32832, 16.6633)
collision_layer = 4
collision_mask = 3
script = ExtResource("2_3rg7b")
jump_impulse = 3.0
acceleration = 12.0
deceleration = 20.0
max_speed = 2.8
hold_drag_force = 10.58

[node name="camera" type="Camera3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0499091, 0)
current = true

[node name="interaction_ray" type="RayCast3D" parent="player/camera"]
target_position = Vector3(0, 0, -2)
collision_mask = 258
collide_with_areas = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.377948, 0)
shape = SubResource("CapsuleShape3D_2q7ol")

[node name="hold_point" type="Marker3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.258331, -0.171823, -0.514982)

[node name="talk" type="Label" parent="player"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xrdut")
text = "Talk?"

[node name="pickup" type="Label" parent="player"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xrdut")
text = "Pick up?"

[node name="upright_pos" type="Marker3D" parent="player"]

[node name="crouched_pos" type="Marker3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.451616, 0)

[node name="scenelet_birthday" type="Area3D" parent="." node_paths=PackedStringArray("participants")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.92831, 0.522123, 15.1179)
collision_layer = 256
collision_mask = 0
script = ExtResource("4_qfjhb")
timeline_file = ExtResource("2_hfj0i")
participants = [NodePath("joaquim"), NodePath("lilith"), NodePath("tom"), NodePath("dave"), NodePath("mickey")]

[node name="collision_shape_3d" type="CollisionShape3D" parent="scenelet_birthday"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.470616, 0.332539)
shape = SubResource("SphereShape3D_85lvf")

[node name="joaquim" parent="scenelet_birthday" instance=ExtResource("9_1rdcu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.366136, -0.192811, -0.611461)
animation = "sitting"

[node name="lilith" parent="scenelet_birthday" instance=ExtResource("4_cnuh1")]
transform = Transform3D(0.848122, 0, 0.529801, 0, 1, 0, -0.529801, 0, 0.848122, -0.419602, -0.245234, -0.31176)

[node name="Skeleton3D" parent="scenelet_birthday/lilith/rig" index="0"]
bones/0/position = Vector3(-0.0156127, 0.507128, -0.0322274)
bones/0/rotation = Quaternion(0.121324, 0.262833, -0.0333344, 0.956603)
bones/1/rotation = Quaternion(-0.0666436, 0.00105029, 0.0162559, 0.997644)
bones/2/rotation = Quaternion(-0.0767875, -0.143204, -0.0101228, 0.986658)
bones/3/rotation = Quaternion(0.00157966, 0.100792, 0.00339229, 0.9949)
bones/4/rotation = Quaternion(0.200473, -0.110096, 0.0194169, 0.9733)
bones/5/rotation = Quaternion(-0.094835, 0.0217142, -0.00206832, 0.995254)
bones/6/rotation = Quaternion(-0.113756, -0.0659775, 0.120446, 0.983971)
bones/8/rotation = Quaternion(-0.228879, 0.462635, -0.753008, 0.408121)
bones/9/rotation = Quaternion(1.89172e-07, 0.0156909, -4.1527e-08, 0.999877)
bones/10/rotation = Quaternion(0.616107, 0.0156918, -0.0122781, 0.78741)
bones/11/rotation = Quaternion(2.49153e-07, 0.284176, 3.04818e-07, 0.958772)
bones/12/rotation = Quaternion(0.133792, 0.284917, -0.107252, 0.94309)
bones/14/rotation = Quaternion(-0.195017, 0.637181, -0.603513, -0.437883)
bones/15/rotation = Quaternion(1.11066e-07, 0.0566517, 3.10051e-08, 0.998394)
bones/16/rotation = Quaternion(0.591609, 0.0566518, -0.0417306, 0.803149)
bones/17/rotation = Quaternion(-3.13525e-08, -0.269507, 3.85059e-07, 0.962998)
bones/18/rotation = Quaternion(-0.00983466, -0.269772, 0.385514, 0.88233)
bones/21/rotation = Quaternion(0.565815, -0.0209656, 0.00230299, 0.824262)
bones/22/rotation = Quaternion(2.56546e-07, -0.016821, 1.79265e-09, 0.999858)
bones/23/rotation = Quaternion(0.909248, -0.0166945, 0.0366391, 0.414302)
bones/24/rotation = Quaternion(-1.89809e-07, 0.167054, -3.11162e-09, 0.985948)
bones/25/rotation = Quaternion(-0.349325, 0.166596, -0.158348, 0.908374)
bones/26/rotation = Quaternion(-2.09475e-05, 0.997646, -0.0685754, -0.000585144)
bones/27/rotation = Quaternion(0.627764, 0.0915219, -0.0106974, 0.772931)
bones/28/rotation = Quaternion(-1.51336e-07, 0.0432835, 4.21087e-09, 0.999063)
bones/29/rotation = Quaternion(0.801899, 0.0434256, -0.058726, 0.592979)
bones/30/rotation = Quaternion(8.78874e-08, -0.254581, 2.21347e-08, 0.967051)
bones/31/rotation = Quaternion(-0.643953, -0.254187, 0.100639, 0.714552)
bones/32/rotation = Quaternion(3.34851e-05, 0.997656, -0.0684268, 0.00058426)

[node name="head" parent="scenelet_birthday/lilith/rig/Skeleton3D" index="1"]
transform = Transform3D(0.965317, -0.23745, 0.108543, 0.236351, 0.971394, 0.0230666, -0.110915, 0.00338772, 0.993824, 0.00288869, 1.01175, 0.0160127)

[node name="mouth" parent="scenelet_birthday/lilith/rig/Skeleton3D/head" index="0"]
transform = Transform3D(1, -3.72529e-08, -2.98023e-08, 5.21541e-08, 1, -2.23517e-08, 0, -7.45058e-09, 1, 0.140365, -0.0192728, 0.156227)

[node name="torso" parent="scenelet_birthday/lilith/rig/Skeleton3D" index="2"]
transform = Transform3D(0.859616, 0.127551, 0.494765, 6.70552e-08, 0.968339, -0.24964, -0.510941, 0.214594, 0.832399, -0.0156127, 0.507128, -0.0322274)

[node name="tom" parent="scenelet_birthday" instance=ExtResource("5_wbyti")]
transform = Transform3D(0.508951, 0, 0.860795, 0, 1, 0, -0.860795, 0, 0.508951, -0.444957, -0.156663, 0.729715)

[node name="dave" parent="scenelet_birthday" instance=ExtResource("6_bvtjr")]
transform = Transform3D(0.628968, 0, -0.777431, 0, 1, 0, 0.777431, 0, 0.628968, 0.989108, -0.124777, -0.249604)

[node name="mickey" parent="scenelet_birthday" instance=ExtResource("9_px4l2")]
transform = Transform3D(0.0522314, 0, -0.998635, 0, 1, 0, 0.998635, 0, 0.0522314, 1.06748, -0.12628, 0.597816)

[node name="world_environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yvrrh")

[node name="directional_light_3d" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.789148, -2.98023e-08, -0.614202, 0.504168, 0.571143, 0.647773, 0.350798, -0.82085, 0.450717, 0, 12.0171, 5.57826)
light_energy = 0.779
shadow_enabled = true

[node name="csg_box_3d" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.93139, 0.346608, 6.84823)
size = Vector3(0.412598, 0.638672, 0.422852)

[node name="csg_sphere_3d" type="CSGSphere3D" parent="csg_box_3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.48648, 0)
radius = 0.274255

[node name="scenelet_trigger" type="Area3D" parent="." node_paths=PackedStringArray("participants")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.62178, 0.438235, 6.99648)
collision_layer = 256
collision_mask = 0
script = ExtResource("4_qfjhb")
timeline_file = ExtResource("5_woklq")
participants = [NodePath("joaquim")]

[node name="collision_shape_3d" type="CollisionShape3D" parent="scenelet_trigger"]
shape = SubResource("SphereShape3D_gubmw")

[node name="joaquim" parent="scenelet_trigger" instance=ExtResource("9_1rdcu")]
transform = Transform3D(-0.43997, 0, -0.898013, 0, 1, 0, 0.898013, 0, -0.43997, 0.12562, -0.438235, 0.0118299)

[node name="rigid_body_3d" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2.82006)
collision_layer = 2
collision_mask = 5
script = ExtResource("8_qs3g0")

[node name="mesh_instance_3d" type="MeshInstance3D" parent="rigid_body_3d"]
mesh = SubResource("SphereMesh_qcdww")

[node name="collision_shape_3d" type="CollisionShape3D" parent="rigid_body_3d"]
shape = SubResource("SphereShape3D_8d451")

[node name="tv_viewport" type="SubViewport" parent="."]
size = Vector2i(320, 240)

[node name="retro_game" parent="tv_viewport" instance=ExtResource("10_yxiqj")]
offset_right = 0.0
offset_bottom = 0.0

[node name="tv" parent="." node_paths=PackedStringArray("viewport") instance=ExtResource("12_yp4lc")]
transform = Transform3D(0.293114, 0, -0.133191, 0, 0.321955, 0, 0.133191, 0, 0.293114, 1.4702, 1.19209e-07, 6.53634)
script = ExtResource("12_8ftgm")
off_material = SubResource("StandardMaterial3D_318m4")
viewport_material = SubResource("StandardMaterial3D_eeq87")
viewport = NodePath("../tv_viewport")

[node name="sound" type="AudioStreamPlayer3D" parent="tv"]
transform = Transform3D(-1.08943, 0, 2.9087, 0, 3.10602, 0, -2.9087, 0, -1.08943, 0, 1.78729, 0)
stream = ExtResource("11_vim10")
attenuation_model = 1
volume_db = -36.0
bus = &"sfx"

[node name="static_body_3d" type="StaticBody3D" parent="tv"]

[node name="collision_shape_3d" type="CollisionShape3D" parent="tv/static_body_3d"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 0.154716, 1.25043, -0.0136251)
shape = SubResource("BoxShape3D_d2sc6")

[node name="omni_light_3d" type="OmniLight3D" parent="tv"]
transform = Transform3D(1, 0, -3.838e-08, 0, 1, 0, 3.838e-08, 0, 1, 1.29021, 1.84343, 0.142409)
light_energy = 1.662
shadow_enabled = true
omni_range = 4.721
omni_attenuation = 1.028

[node name="basement" parent="." instance=ExtResource("2_mapes")]

[editable path="scenelet_birthday/lilith"]
[editable path="tv"]
